# wheel

./: .gitignore  Cargo.toml  README.md  compose.yaml  release.toml  wheel.sh
.github/: dependabot.yml
.github/workflows/: release.yml
brew-installation/: README.md  wheel.rb
ceramic-config/: Cargo.toml  README.md
ceramic-config/src/: convert.rs  daemon.rs  lib.rs
cli/: Cargo.toml  README.md
cli/src/: ceramic.rs  did.rs  lib.rs  main.rs
cli/src/install/: ceramic_app_template.rs  ceramic_daemon.rs  compose_db.rs  kubo.rs  mod.rs  models.rs  npm.rs  verify_db.rs  verify_postgres.rs
cli/src/prompt/: cas_auth.rs  ceramic.rs  ceramic_advanced_config.rs  ceramic_config.rs  ceramic_local_config.rs  ceramic_remote_config.rs  did.rs  mod.rs  project.rs
cli/templates/: basic_profile.graphql.jinja  following.graphql.jinja  posts.graphql.jinja  posts_profile.graphql.jinja
