[package]
name = "ceramic-config"
version = "0.1.49"
edition = "2021"
description = "Configuration for ceramic node"
license = "MIT OR Apache-2.0"
homepage = "https://ceramic.network/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
