[package]
name = "wheel-3box"
version = "0.1.43"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
ceramic-config = { path = "../ceramic-config", version = "0.1.43" }
clap = { version = "4.1.4", features = ["derive"] }
did-method-key = "0.2"
env_logger = "0.10.0"
futures-util = "0.3.26"
hex = "0.4.3"
inquire = "0.6.0"
log.workspace = true
reqwest = { version = "0.11.14", default-features = false, features = ["rustls", "stream"] }
semver = "1.0.16"
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "sqlite"] }
ssi = "0.6.0"
tokio = { version = "1.25.0", default-features = false, features = ["fs", "macros", "process", "rt", "rt-multi-thread"] }
which = "4.4.0"

[[bin]]
name = "wheel"
path = "src/main.rs"
