[package]
name = "wheel-3box"
version = "0.1.52"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
askama = "0.12.0"
ceramic-config = { path = "../ceramic-config", version = "0.1.52" }
clap = { version = "4.1.4", features = ["derive"] }
did-method-key = "0.2"
env_logger = "0.10"
futures-util = "0.3"
hex = "0.4"
inquire = "0.6"
log.workspace = true
reqwest = { version = "0.11", default-features = false, features = ["rustls", "stream"] }
semver = "1.0"
serde.workspace = true
serde_json.workspace = true
spinners = "4.1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "sqlite"] }
ssi = "0.7"
tokio = { version = "1.25", default-features = false, features = ["fs", "macros", "process", "rt", "rt-multi-thread"] }
which = "4.4"
zip = "0.6"

[[bin]]
name = "wheel"
path = "src/main.rs"
